force-app/main/default/objects/c2g__codaCreditNote__c/c2g__codaCreditNote__c.object-meta.xml
<CustomObject>
    <customHelpPage>c2g__codahelpcreditnote</customHelpPage>
    <description>Holds information that applies to the whole credit note such as customer account and credit note date.</description>
    <label>Sales Credit Note</label>
    <nameField>
        <displayFormat>SCR{000000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Credit Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>