force-app/main/default/objects/c2g__codaCreditNote__c/listViews/c2g__All.listView-meta.xml
<ListView>
    <fullName>c2g__All</fullName>
    <columns>NAME</columns>
    <columns>c2g__Account__c</columns>
    <columns>c2g__CreditNoteDate__c</columns>
    <columns>c2g__Period__c</columns>
    <columns>c2g__DueDate__c</columns>
    <columns>c2g__CreditNoteCurrency__c</columns>
    <columns>c2g__CreditNoteTotal__c</columns>
    <columns>c2g__Invoice__c</columns>
    <columns>c2g__Opportunity__c</columns>
    <columns>c2g__CreditNoteReason__c</columns>
    <columns>c2g__PrintStatus__c</columns>
    <columns>c2g__CreditNoteStatus__c</columns>
    <columns>c2g__DiscardReason__c</columns>
    <columns>c2g__OutstandingValue__c</columns>
    <columns>c2g__OwnerCompany__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>