force-app/main/default/objects/c2g__codaCreditNote__c/listViews/FF_Cooper_Parry_Advisory_Limited_codaCreditNote.listView-meta.xml
<ListView>
    <fullName>FF_Cooper_Parry_Advisory_Limited_codaCreditNote</fullName>
    <filterScope>Queue</filterScope>
    <label>FF Cooper Parry Advisory Limited</label>
    <queue>FF_Cooper_Parry_Advisory_Limited</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>