force-app/main/default/objects/c2g__codaCreditNote__c/listViews/FF_Cooper_Parry_Law_LLP_codaCreditNote.listView-meta.xml
<ListView>
    <fullName>FF_Cooper_Parry_Law_LLP_codaCreditNote</fullName>
    <filterScope>Queue</filterScope>
    <label>FF Cooper Parry Law LLP</label>
    <queue>FF_Cooper_Parry_Law_LLP</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>