force-app/main/default/objects/c2g__codaCreditNote__c/listViews/FFX_Discarded.listView-meta.xml
<ListView>
    <fullName>FFX_Discarded</fullName>
    <columns>NAME</columns>
    <columns>c2g__CreditNoteDate__c</columns>
    <columns>c2g__Account__c</columns>
    <columns>c2g__CreditNoteCurrency__c</columns>
    <columns>c2g__CreditNoteTotal__c</columns>
    <columns>c2g__InvoiceReference__c</columns>
    <columns>c2g__Period__c</columns>
    <columns>c2g__CreditNoteStatus__c</columns>
    <columns>c2g__CreditNoteReason__c</columns>
    <columns>c2g__PrintStatus__c</columns>
    <columns>c2g__OwnerCompany__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>c2g__CreditNoteStatus__c</field>
        <operation>equals</operation>
        <value>Discarded</value>
    </filters>
    <label>Discarded</label>
    <language>en_US</language>
</ListView>